Calc.g4
grammar Calc;

// Tokens
LEFTBRACKET: '(';
RIGHTBRACKET: ')';
MUL: '*';
DIV: '/';
ADD: '+';
SUB: '-';
NUMBER: [0-9]+;
WHITESPACE: [ \r\n\t]+ -> skip;

// Rules
start : expression EOF;

expression
   : left='(' expression right=')' #LeftRightBracket
   | expression op=('*'|'/') expression # MulDiv
   | expression op=('+'|'-') expression # AddSub
   | NUMBER                             # Number
   ;
